...
//

import SwiftUI

enum NavigationRute : Hashable {
    case detail(id: Int)
    case add
}

struct HomeView: View {
    // MARK: - properties
    @StateObject var viewModel : ProductViewModel = ProductViewModel(service: NetworkManager())
    var columns : [GridItem] = Array(repeating: GridItem(.flexible()), count: 2)
...
